Labs/disallow-privileged-containers/.chainsaw-test/bad-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      privileged: true
