Labs/disallow-privileged-containers/.chainsaw-test/good-resource.yaml
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod
spec:
  containers:
  - name: container01
    image: nginx
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
